[package]
name = "polkadot-core-primitives"
edition = "2021"
#  repository = "https://github.com/paritytech/polkadot.git"
version = "0.9.36"
[dependencies]
sp-core = { path="../primitives/core",  default-features = false }
sp-std = { path="../primitives/std", default-features = false }
sp-runtime = { path="../primitives/runtime", default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "3.4.0", default-features = false, features = [ "derive" ] }

[features]
default = [ "std" ]
std = [
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"scale-info/std",
	"parity-scale-codec/std",
]
