[package]
name = "polkadot-primitives"
version = "0.9.36"
edition = "2021"

[dependencies]
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
hex-literal = "0.4.1"
parity-scale-codec = { version = "3.4.0", default-features = false, features = ["bit-vec", "derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["bit-vec", "derive"] }
serde = { version = "1.0.137", optional = true, features = ["derive"] }

sp-application-crypto = {path="../primitives/application-crypto", default-features = false }
inherents = { package = "sp-inherents", path="../primitives/inherents",default-features = false }
primitives = { package = "sp-core",path="../primitives/core", default-features = false }
runtime_primitives = { package = "sp-runtime", path="../primitives/runtime", default-features = false }
sp-api = {   path="../primitives/api",default-features = false}
sp-arithmetic = { path="../primitives/arithmetic", default-features = false }
sp-authority-discovery = { path="../primitives/authority-discovery", default-features = false }
sp-consensus-slots = { path="../primitives/consensus/slots", default-features = false }
sp-io = {path="../primitives/io", default-features = false }
sp-keystore = { path="../primitives/keystore", optional = true }
sp-staking = {  path="../primitives/staking", default-features = false }
sp-std = { package = "sp-std", path="../primitives/std",default-features = false }

polkadot-core-primitives = { path = "../core-primitives", default-features = false }
polkadot-parachain = { path = "../parachain", default-features = false }

[features]
default = ["std"]
std = [
	"sp-application-crypto/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"primitives/std",
	"inherents/std",
	"sp-api/std",
	"sp-authority-discovery/std",
	"sp-consensus-slots/std",
	"sp-keystore",
	"sp-std/std",
	"sp-io/std",
	"sp-staking/std",
	"sp-arithmetic/std",
	"runtime_primitives/std",
	"serde",
	"polkadot-parachain/std",
	"polkadot-core-primitives/std",
	"bitvec/std",
]
runtime-benchmarks = []
