[package]
name = "storage-proof-fuzzer"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
honggfuzz = "0.5.54"
log = "0.4.0"
env_logger = "0.10.0"

# Bridge Dependencies

bp-runtime = { path = "../../primitives_bridge/runtime" }

# Substrate Dependencies

sp-core = { version = "7.0.0", default-features = false, path = "../../primitives/core" }
sp-runtime ={ version = "7.0.0", default-features = false, path = "../../primitives/runtime" }
sp-state-machine = { version = "0.13.0", default-features = false, path = "../../primitives/state-machine" }
sp-std = { version = "5.0.0", default-features = false, path = "../../primitives/std" }
sp-trie = { version = "7.0.0", default-features = false, path = "../../primitives/trie" }
