[package]
name = "pallet-bridge-grandpa"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
finality-grandpa = { version = "0.16.1", default-features = false }
log = { version = "0.4.14", default-features = false }
num-traits = { version = "0.2", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0", optional = true }

# Bridge Dependencies

bp-runtime = { path = "../../primitives_bridge/runtime", default-features = false }
bp-header-chain = { path = "../../primitives_bridge/header-chain", default-features = false }

# Substrate Dependencies

frame-support = { version = "4.0.0-dev", default-features = false, path = "../../frame/support" }
#frame-support2 = { version = "4.0.0-dev", default-features = false, path = "../support" }
frame-system = { version = "4.0.0-dev", path = "../../frame/system", default-features = false }
sp-finality-grandpa ={ version = "4.0.0-dev",default-features = false, path = "../../primitives/finality-grandpa" }
sp-runtime = { version = "7.0.0", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "5.0.0", default-features = false, path = "../../primitives/std" }
sp-trie = { version = "7.0.0",default-features = false, path = "../../primitives/trie" }

# Optional Benchmarking Dependencies
bp-test-utils = { path = "../../primitives_bridge/test-utils", default-features = false, optional = true }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, path = "../../frame/benchmarking", optional = true }

[dev-dependencies]
sp-core = { version = "7.0.0", default-features = false, path = "../../primitives/core" }
sp-io = { version = "7.0.0", default-features = false, path = "../../primitives/io" }

[features]
default = ["std"]
std = [
	"bp-header-chain/std",
	"bp-runtime/std",
	"bp-test-utils/std",
	"codec/std",
	"finality-grandpa/std",
	"frame-support/std",
	#"frame-support2/std",
	"frame-system/std",
	"log/std",
	"num-traits/std",
	"scale-info/std",
	"serde",
	"sp-finality-grandpa/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-trie/std",
]
runtime-benchmarks = [
	"bp-test-utils",
	"frame-benchmarking/runtime-benchmarks",
]
