[package]
name = "pallet-bridge-messages"
description = "Module that allows bridged chains to exchange messages using lane concept."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
bitvec = { version = "1", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
log = { version = "0.4.14", default-features = false }
num-traits = { version = "0.2", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

# Bridge dependencies

bp-message-dispatch = { path = "../../primitives_bridge/message-dispatch", default-features = false }
bp-messages = { path = "../../primitives_bridge/messages", default-features = false }
bp-runtime = { path = "../../primitives_bridge/runtime", default-features = false }

# Substrate Dependencies

frame-benchmarking = { version = "4.0.0-dev", default-features = false, path = "../../frame/benchmarking", optional = true }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../../frame/support" }
frame-support2 = { version = "4.0.0-dev", default-features = false, path = "../support" }
frame-system = { version = "4.0.0-dev", path = "../../frame/system", default-features = false }
sp-core = { version = "7.0.0", default-features = false, path = "../../primitives/core" }
sp-runtime = { version = "7.0.0", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "5.0.0", default-features = false, path = "../../primitives/std" }

[dev-dependencies]
sp-io = { version = "7.0.0", default-features = false, path = "../../primitives/io" }
pallet-balances = { version = "4.0.0-dev",default-features = false, path = "../../frame/balances"  }

[features]
default = ["std"]
std = [
	"bp-message-dispatch/std",
	"bp-messages/std",
	"bp-runtime/std",
	"codec/std",
	"frame-support/std",
	"frame-support2/std",
	"frame-system/std",
	"log/std",
	"num-traits/std",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]
