[package]
name = "pallet-bridge-relayers"
description = "Module used to store relayer rewards and coordinate relayers set."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }

# Bridge dependencies

bp-messages = { path = "../../primitives_bridge/messages", default-features = false }
bp-relayers = { path = "../../primitives_bridge/relayers", default-features = false }
bp-runtime = { path = "../../primitives_bridge/runtime", default-features = false }
pallet-bridge-messages = { path = "../messages", default-features = false }

# Substrate Dependencies
frame-benchmarking = { version = "4.0.0-dev", default-features = false, path = "../../frame/benchmarking", optional = true }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../../frame/support" }
frame-system = { version = "4.0.0-dev", path = "../../frame/system", default-features = false }
sp-arithmetic = { version = "6.0.0", default-features = false, path = "../../primitives/arithmetic" }
sp-runtime = { version = "7.0.0", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "5.0.0", default-features = false, path = "../../primitives/std" }

[dev-dependencies]
bp-runtime = { path = "../../primitives_bridge/runtime" }
pallet-balances = { version = "4.0.0-dev",default-features = false, path = "../../frame/balances"  }
sp-core ={ version = "7.0.0", default-features = false, path = "../../primitives/core" }
sp-io = { version = "7.0.0", default-features = false, path = "../../primitives/io" }
sp-runtime ={ version = "7.0.0", default-features = false, path = "../../primitives/runtime" }

[features]
default = ["std"]
std = [
	"bp-messages/std",
	"bp-relayers/std",
	"bp-runtime/std",
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"scale-info/std",
	"sp-arithmetic/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
