[package]
name = "pallet-bridge-token-swap"
description = "An Substrate pallet that allows parties on different chains (bridged using messages pallet) to swap their tokens"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
log = { version = "0.4.14", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0", optional = true }

# Bridge dependencies

bp-message-dispatch = { path = "../../primitives_bridge/message-dispatch", default-features = false }
bp-messages = { path = "../../primitives_bridge/messages", default-features = false }
bp-runtime = { path = "../../primitives_bridge/runtime", default-features = false }
bp-token-swap = { path = "../../primitives_bridge/token-swap", default-features = false }
pallet-bridge-dispatch = { path = "../dispatch", default-features = false }
pallet-bridge-messages = { path = "../messages", default-features = false }

# Substrate Dependencies

frame-benchmarking = { version = "4.0.0-dev", default-features = false, path = "../../frame/benchmarking", optional = true }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../../frame/support" }
#frame-support2 = { version = "4.0.0-dev", default-features = false, path = "../support" }
frame-support3 = { version = "4.0.0-dev", default-features = false, path = "../support2" }
frame-system = {version = "4.0.0-dev", default-features = false, path = "../../frame/system" }
sp-core = { version = "7.0.0", default-features = false, path = "../../primitives/core" }
sp-io = { version = "7.0.0", default-features = false, path = "../../primitives/io" }
sp-runtime = { version = "7.0.0", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "5.0.0", default-features = false, path = "../../primitives/std" }

[dev-dependencies]
pallet-balances = { version = "4.0.0-dev", path = "../../frame/balances" }

[features]
default = ["std"]
std = [
	"codec/std",
	"bp-message-dispatch/std",
	"bp-messages/std",
	"bp-runtime/std",
	"bp-token-swap/std",
	"frame-support/std",
	"frame-support3/std",
	"frame-system/std",
	"log/std",
	"pallet-bridge-dispatch/std",
	"pallet-bridge-messages/std",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std"
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]
