[package]
name = "bp-beefy"
description = "Primitives of pallet-bridge-beefy module."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "bit-vec"] }
scale-info = { version = "2.0.1", default-features = false, features = ["bit-vec", "derive"] }
serde = { version = "1.0", optional = true }
static_assertions = "1.1"

# Bridge Dependencies

bp-runtime = { path = "../runtime", default-features = false }

# Substrate Dependencies

beefy-merkle-tree = {path = "../../frame/beefy-mmr/primitives", version="4.0.0-dev", default-features = false }
beefy-primitives = { version = "4.0.0-dev", path = "../../primitives/beefy", package = "sp-beefy" }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../../frame/support" }
pallet-beefy-mmr = {version = "4.0.0-dev", default-features = false, path = "../../frame/beefy-mmr" }
pallet-mmr = { version = "4.0.0-dev", default-features = false, path = "../../frame/merkle-mountain-range" }
sp-mmr-primitives = { version = "4.0.0-dev", path = "../../primitives/merkle-mountain-range" }
sp-application-crypto = {path = "../../primitives/application-crypto", default-features = false }
sp-core = { version = "7.0.0", default-features = false, path = "../../primitives/core" }
sp-io = { version = "7.0.0", default-features = false, path = "../../primitives/io" }
sp-runtime = { version = "7.0.0", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "5.0.0", default-features = false, path = "../../primitives/std" }

[features]
default = ["std"]
std = [
	"beefy-primitives/std",
	"bp-runtime/std",
	"codec/std",
	"frame-support/std",
	"pallet-mmr/std",
	"sp-mmr-primitives/std",
	"scale-info/std",
	"serde",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std"
]
