[package]
name = "bp-header-chain"
description = "A common interface for describing what a bridge pallet should be able to do."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
finality-grandpa = { version = "0.16.1", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0", optional = true }

# Bridge dependencies

bp-runtime = { path = "../runtime", default-features = false }

# Substrate Dependencies
frame-support = { version = "4.0.0-dev", default-features = false, path = "../../frame/support" }
sp-core = { version = "7.0.0", default-features = false, path = "../../primitives/core" }
sp-finality-grandpa ={ version = "4.0.0-dev",default-features = false, path = "../../primitives/finality-grandpa" }
sp-runtime =  { version = "7.0.0", default-features = false, path = "../../primitives/runtime" }
sp-std =  { version = "5.0.0", default-features = false, path = "../../primitives/std" }

[dev-dependencies]
assert_matches = "1.5"
bp-test-utils = { path = "../test-utils" }
hex = "0.4"
hex-literal = "0.3"

[features]
default = ["std"]
std = [
	"bp-runtime/std",
	"codec/std",
	"finality-grandpa/std",
	"serde/std",
	"frame-support/std",
	"scale-info/std",
	"sp-core/std",
	"sp-finality-grandpa/std",
	"sp-runtime/std",
	"sp-std/std",
]
