[package]
name = "bp-messages"
description = "Primitives of messages module."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
bitvec = { version = "1", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "bit-vec"] }
impl-trait-for-tuples = "0.2"
scale-info = { version = "2.0.1", default-features = false, features = ["bit-vec", "derive"] }
serde = { version = "1.0", optional = true, features = ["derive"] }

# Bridge dependencies

bp-runtime = { path = "../runtime", default-features = false }

# Substrate Dependencies

frame-support = { version = "4.0.0-dev", default-features = false, path = "../../frame/support" }
frame-support2 = { version = "4.0.0-dev", default-features = false, path = "../../modules/support" }
frame-system = {version = "4.0.0-dev", default-features = false, path = "../../frame/system" }
sp-core = { version = "7.0.0", default-features = false, path = "../../primitives/core" }
sp-std = { version = "5.0.0", default-features = false, path = "../../primitives/std" }

[dev-dependencies]
hex = "0.4"
hex-literal = "0.3"

[features]
default = ["std"]
std = [
	"bitvec/std",
	"bp-runtime/std",
	"codec/std",
	"frame-support/std",
	"frame-support2/std",
	"frame-system/std",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-std/std"
]
