[package]
name = "bp-polkadot-core"
description = "Primitives of Polkadot-like runtime."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

# Bridge Dependencies

bp-messages = { path = "../messages", default-features = false }
bp-runtime = { path = "../runtime", default-features = false }

# Substrate Based Dependencies

frame-support = { version = "4.0.0-dev", default-features = false, path = "../../frame/support" }
frame-system ={ version = "4.0.0-dev", default-features = false, path = "../../frame/system" }
sp-api = { version = "4.0.0-dev", default-features = false, path = "../../primitives/api" }
sp-core = { version = "7.0.0", default-features = false, path = "../../primitives/core" }
sp-runtime ={ version = "7.0.0", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "5.0.0", default-features = false, path = "../../primitives/std" }
sp-version = { version = "5.0.0", default-features = false, path = "../../primitives/version" }

[dev-dependencies]
hex = "0.4"

[features]
default = ["std"]
std = [
	"bp-messages/std",
	"bp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-version/std",
]
