[package]
name = "bp-relayers"
description = "Primitives of relayers module."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "bit-vec"] }
scale-info = { version = "2.5.0", default-features = false, features = ["bit-vec", "derive"] }

# Bridge Dependencies

bp-messages = { path = "../messages", default-features = false }
bp-runtime = { path = "../runtime", default-features = false }

# Substrate Dependencies

frame-support = { version = "4.0.0-dev", default-features = false, path = "../../frame/support" }
sp-runtime ={ version = "7.0.0", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "5.0.0", default-features = false, path = "../../primitives/std" }

[dev-dependencies]
hex = "0.4"
hex-literal = "0.4"

[features]
default = ["std"]
std = [
	"bp-messages/std",
	"bp-runtime/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-std/std",
]
