[package]
name = "bp-runtime"
description = "Primitives that may be used at (bridges) runtime level."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
hash-db = { version = "0.15.2", default-features = false }
impl-trait-for-tuples = "0.2.2"
num-traits = { version = "0.2", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0", optional = true, features = ["derive"] }


# Substrate Dependencies
frame-system = { version = "4.0.0-dev", path = "../../frame/system", default-features = false }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../../frame/support" }
#frame-support2 = { version = "4.0.0-dev", default-features = false, path = "../../modules/support" }
sp-core = { version = "7.0.0", default-features = false, path = "../../primitives/core" }
sp-io = { version = "7.0.0", default-features = false, path = "../../primitives/io" }
sp-runtime = { version = "7.0.0", default-features = false, path = "../../primitives/runtime" }
sp-state-machine = { version = "0.13.0",default-features = false, path = "../../primitives/state-machine" }
sp-std = { version = "5.0.0", default-features = false, path = "../../primitives/std" }
sp-trie = { version = "7.0.0",default-features = false, path = "../../primitives/trie" }
trie-db = { version = "0.27.1", default-features = false }
#sp-trie = {  version = "6.0.0",git = "https://github.com/paritytech/substrate",  default-features = false, branch = "polkadot-v0.9.28" }

[dev-dependencies]
hex-literal = "0.3"

[features]
default = ["std"]
std = ["codec/std",
"frame-support/std", 
"serde", "hash-db/std", "num-traits/std", "scale-info/std", "sp-core/std","sp-io/std", "sp-runtime/std",
 "sp-std/std", "sp-state-machine/std","trie-db/std",]
