[package]
name = "substrate"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bp-messages = { path = "../messages", default-features = false }
bp-runtime = { path = "../runtime", default-features = false }
# Bridge dependencies


# Substrate Dependencies

frame-system =  { version = "4.0.0-dev", path = "../../frame/system", default-features = false }
frame-support = { version = "4.0.0-dev", path = "../../frame/support", default-features = false }
pallet-transaction-payment = { version = "4.0.0-dev", path = "../../frame/transaction-payment", default-features = false }
sp-core ={ version = "7.0.0", default-features = false, path = "../../primitives/core" }
sp-runtime =  { version = "7.0.0", default-features = false, path = "../../primitives/runtime" }
sp-api = { version = "4.0.0-dev", default-features = false, path = "../../primitives/api" }
sp-std = { version = "5.0.0", default-features = false, path = "../../primitives/std" }

[features]
default = ["std"]
std = [
	"bp-messages/std",
	"bp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
