[package]
name = "bp-token-swap"
description = "Primitives of the pallet-bridge-token-swap pallet"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

# Bridge Dependencies

bp-runtime = { path = "../runtime", default-features = false }

# Substrate Dependencies
frame-support = { version = "4.0.0-dev", default-features = false, path = "../../frame/support" }
sp-core = { version = "7.0.0", default-features = false, path = "../../primitives/core" }
sp-io = { version = "7.0.0", default-features = false, path = "../../primitives/io" }
sp-std = { version = "5.0.0", default-features = false, path = "../../primitives/std" }

[dev-dependencies]
hex = "0.4"
hex-literal = "0.3"

[features]
default = ["std"]
std = [
	"bp-runtime/std",
	"codec/std",
	"frame-support/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
]
