[package]
name = "bin-substrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = "1.9.0"
async-trait = "0.1.42"
codec = { package = "parity-scale-codec", version = "3.0.0" }
futures = "0.3.12"
hex = "0.4"
log = "0.4.14"
num-format = "0.4"
num-traits = "0.2"
paste = "1.0"
rand = "0.8"
structopt = "0.3"
strum = { version = "0.24.1", features = ["derive"] }


# Bridge dependencies

bp-header-chain = { path = "../../primitives_bridge/header-chain" }
#bp-kusama = { path = "../../primitives/chain-kusama" }
bp-messages = { path = "../../primitives_bridge/messages" }
bp-message-dispatch = { path = "../../primitives_bridge/message-dispatch" }
our-chain = { path = "../../primitives_bridge/our-chain" }
#bp-polkadot = { path = "../../primitives/chain-polkadot" }
chain-substrate= { path = "../../primitives_bridge/chain-substrate" }
#bp-rialto-parachain = { path = "../../primitives/chain-rialto-parachain" }
#bp-rococo = { path = "../../primitives/chain-rococo" }
bp-runtime = { path = "../../primitives_bridge/runtime" }
bp-token-swap = { path = "../../primitives_bridge/token-swap" }
#bp-westend = { path = "../../primitives/chain-westend" }
#bp-wococo = { path = "../../primitives/chain-wococo" }
bridge-runtime-common = { path = "../../bin/runtime-common" }
finality-relay = { path = "../finality" }
messages-relay = { path = "../messages" }
kitchensink-runtime = { path = "../../bin/node/runtime" }
pallet-bridge-dispatch = { path = "../../modules/dispatch" }
pallet-bridge-grandpa = { path = "../../modules/grandpa" }
pallet-bridge-messages = { path = "../../modules/messages" }
pallet-bridge-token-swap = { path = "../../modules/token-swap" }
#relay-kusama-client = { path = "../client-kusama" }
client-ourchain = { path = "../client-ourchain" }
#relay-polkadot-client = { path = "../client-polkadot" }
client-substrate = { path = "../client-substrate" }
relay-substrate-client = {path ="../substrate-client"}
#relay-rialto-parachain-client = { path = "../client-rialto-parachain" }
#relay-rococo-client = { path = "../client-rococo" }
#relay-wococo-client = { path = "../client-wococo" }
#relay-substrate-client = { path = "../client-substrate2" }
relay-utils = { path = "../utils" }
#relay-westend-client = { path = "../client-westend" }
#rialto-parachain-runtime = { path = "../../bin/rialto-parachain/runtime" }
runtime = { path = "../../bin/substrate2/runtime" }
substrate-relay-helper = { path = "../lib-substrate-relay" }

# Substrate Dependencies
frame-support = { version = "4.0.0-dev", default-features = false, path = "../../frame/support" }
pallet-balances = { version = "4.0.0-dev", default-features = false, path = "../../frame/balances" }
sp-core = { version = "7.0.0", default-features = false, path = "../../primitives/core" }
sp-io = { version = "7.0.0", default-features = false, path = "../../primitives/io" }
sp-runtime = { version = "7.0.0", default-features = false, path = "../../primitives/runtime" }
sp-version = { version = "5.0.0", default-features = false, path = "../../primitives/version" }

# Polkadot Dependencies

# polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "master" }
# polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "master" }
# polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", branch = "master" }
# polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "master" }

[dev-dependencies]
bp-test-utils = { path = "../../primitives_bridge/test-utils" }
hex-literal = "0.3"
pallet-bridge-grandpa = { path = "../../modules/grandpa" }
sp-keyring = { version = "7.0.0", default-features = false, path = "../../primitives/keyring" }
tempfile = "3.2"
finality-grandpa = { version = "0.15.0" }


