[package]
name = "client-ourchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
relay-substrate-client = { path = "../substrate-client" }
relay-utils = { path = "../utils" }


# Supported Chains

our-chain = { path = "../../primitives_bridge/our-chain" }
kitchensink-runtime = { path = "../../bin/node/runtime" }
bp-messages = { path = "../../primitives_bridge/messages" }


# Substrate Dependencies

frame-support = { version = "4.0.0-dev", default-features = false, path = "../../frame/support" }
frame-system = { version = "4.0.0-dev", default-features = false, path = "../../frame/system" }
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, path = "../../frame/transaction-payment" }
sp-core = { version = "7.0.0", default-features = false, path = "../../primitives/core" }
sp-runtime = {version = "7.0.0", default-features = false, path = "../../primitives/runtime" }
pallet-asset-tx-payment = { version = "4.0.0-dev", default-features = false, path = "../../frame/transaction-payment/asset-tx-payment/" }
