[package]
name = "finality-relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.6.5"
async-trait = "0.1.40"
backoff = "0.2"
bp-header-chain = { path = "../../primitives_bridge/header-chain" }
futures = "0.3.5"
log = "0.4.11"
num-traits = "0.2"
relay-utils = { path = "../utils" }

[dev-dependencies]
parking_lot = "0.11.0"

